--- a/src/main/resources/META-INF/poop_at.cfg
+++ b/src/main/resources/META-INF/poop_at.cfg
@@ -5,4 +5,15 @@ public net.minecraft.util.StringTranslate func_74808_a()Lnet/minecraft/util/Stri
 public net.minecraft.block.BlockSlab field_150004_a
 public net.minecraft.block.Block field_149783_u
 public net.minecraft.block.Block func_149642_a(Lnet/minecraft/world/World;IIILnet/minecraft/item/ItemStack;)V
-
+public net.minecraft.block.Block func_149644_j(I)Lnet/minecraft/item/ItemStack;
+public net.minecraft.block.BlockStoneSlab func_149644_j(I)Lnet/minecraft/item/ItemStack;
+public net.minecraft.block.BlockPane func_149644_j(I)Lnet/minecraft/item/ItemStack;
+public net.minecraft.block.BlockDirt func_149644_j(I)Lnet/minecraft/item/ItemStack;
+public net.minecraft.block.BlockRotatedPillar func_149644_j(I)Lnet/minecraft/item/ItemStack;
+public net.minecraft.block.BlockLeaves func_149644_j(I)Lnet/minecraft/item/ItemStack;
+public net.minecraft.block.BlockWoodSlab func_149644_j(I)Lnet/minecraft/item/ItemStack;
+public net.minecraft.block.BlockQuartz func_149644_j(I)Lnet/minecraft/item/ItemStack;
+public net.minecraft.block.BlockRedstoneLight func_149644_j(I)Lnet/minecraft/item/ItemStack;
+public net.minecraft.block.BlockRedstoneOre func_149644_j(I)Lnet/minecraft/item/ItemStack;
+public net.minecraft.block.BlockSilverfish func_149644_j(I)Lnet/minecraft/item/ItemStack;
+public net.minecraft.block.material.Material func_76226_g()Lnet/minecraft/block/material/Material;
