Whatever this abomination is

--- a/src/main/resources/META-INF/poop_at.cfg
+++ b/src/main/resources/META-INF/poop_at.cfg
@@ -17,3 +17,6 @@ public net.minecraft.block.BlockRedstoneLight func_149644_j(I)Lnet/minecraft/ite
 public net.minecraft.block.BlockRedstoneOre func_149644_j(I)Lnet/minecraft/item/ItemStack;
 public net.minecraft.block.BlockSilverfish func_149644_j(I)Lnet/minecraft/item/ItemStack;
 public net.minecraft.block.material.Material func_76226_g()Lnet/minecraft/block/material/Material;
+public net.minecraft.block.BlockFire field_149849_a
+public net.minecraft.block.BlockFire field_149848_b
+public net.minecraft.client.audio.SoundHandler func_147693_a(Lnet/minecraft/util/ResourceLocation;Lnet/minecraft/client/audio/SoundList;)V
